--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -64,5 +64,9 @@
   {% if site.footer-links.youtube %}
   <li><a href="https://youtube.com/{{ site.footer-links.youtube }}" class="icon-28 youtube" title="YouTube"><svg viewBox="0 0 512 512"><path d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"/></svg><!--[if lt IE 9]><em>YouTube</em><![endif]--></a></li>
   {% endif %}
+  
+  {% if site.footer-links.youtube %}
+  <li><a href="https://vrchat.com/home/user/{{ site.footer-links.vrchat }}" class="icon-28 vrchat" title="VRChat"><svg viewBox="0 0 512 512"><path d="M47.99, 59c - 0.928, 0 - 1.819 - 0.438 - 2.386 - 1.174L36.508, 46H12c - 2.757, 0 - 5 - 2.243 - 5 - 5V12 c0 - 2.757, 2.243 - 5, 5 - 5h40c2.757, 0, 5, 2.243, 5, 5v29c0, 2.757 - 2.243, 5 - 5, 5h - 1v9.99C51, 57.649, 49.649, 59, 47.99, 59z M12, 9 c - 1.654, 0 - 3, 1.346 - 3, 3v29c0, 1.654, 1.346, 3, 3, 3h25c0.311, 0, 0.604, 0.145, 0.793, 0.391l9.396, 12.216C47.382, 56.856, 47.674, 57, 47.99, 57 c0.557, 0, 1.01 - 0.453, 1.01 - 1.01V45c0 - 0.553, 0.447 - 1, 1 - 1h2c1.654, 0, 3 - 1.346, 3 - 3V12c0 - 1.654 - 1.346 - 3 - 3 - 3H12z"/></svg><!--[if lt IE 9]><em>YouTube</em><![endif]--></a></li>
+  {% endif %}
 
 </ul>
