--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -66,7 +66,7 @@
   {% endif %}
   
   {% if site.footer-links.vrchat %}
-  <li><a href="https://vrchat.com/home/user/{{ site.footer-links.vrchat }}" class="icon-30 vrchat" title="VRChat"><svg viewBox="0 0 512 512"><path d= "M47.99,59c-0.928,0-1.819-0.438-2.386-1.174L36.508,46H12c-2.757,0-5-2.243-5-5V12 c0-2.757,2.243-5,5-5h40c2.757,0,5,2.243,5,5v29c0,2.757-2.243,5-5,5h-1v9.99C51,57.649,49.649,59,47.99,59z M12,9 c-1.654,0-3,1.346-3,3v29c0,1.654,1.346,3,3,3h25c0.311,0,0.604,0.145,0.793,0.391l9.396,12.216C47.382,56.856,47.674,57,47.99,57 c0.557,0,1.01-0.453,1.01-1.01V45c0-0.553,0.447-1,1-1h2c1.654,0,3-1.346,3-3V12c0-1.654-1.346-3-3-3H12z M31.872,17.327l-5.16,18.9C26.588,36.683,26.173,37,25.7,37h-3.688 c-0.473,0-0.888-0.317-1.013-0.773l-5.16-18.9C15.656,16.659,16.159,16,16.851,16h2.17c0.473,0,0.888,0.317,1.013,0.773l3.821,13.99 l3.821-13.99C27.801,16.317,28.216,16,28.689,16h2.17C31.552,16,32.055,16.659,31.872,17.327z M46.6,26.5v-6.3c0-2.32-1.88-4.2-4.2-4.2h-4.2c-2.32,0-4.2,1.88-4.2,4.2v15.75 c0,0.58,0.47,1.05,1.05,1.05h2.1c0.58,0,1.05-0.47,1.05-1.05V30.7h1.207l2.868,5.721C42.454,36.776,42.817,37,43.214,37h2.334 c0.781,0,1.289-0.822,0.939-1.52l-2.546-5.081C45.496,29.783,46.6,28.274,46.6,26.5z M38.2,25.45v-4.2c0-0.58,0.47-1.05,1.05-1.05 h2.1c0.58,0,1.05,0.47,1.05,1.05v4.2c0,0.58-0.47,1.05-1.05,1.05h-2.1C38.67,26.5,38.2,26.03,38.2,25.45z"/></svg><!--[if lt IE 9]><em>YouTube</em><![endif]--></a></li>
+  <li><a href="https://vrchat.com/home/user/{{ site.footer-links.vrchat }}" class="icon-30 vrchat" title="VRChat"><svg viewBox="0 0 512 512"><src="https://assets.vrchat.com/www/brand/vrchat-logo-white-transparent-crop-background.png"/></svg><!--[if lt IE 9]><em>YouTube</em><![endif]--></a></li>
   {% endif %}
 
 </ul>
