--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -66,7 +66,41 @@
   {% endif %}
   
   {% if site.footer-links.vrchat %}
-  <li><a href="https://vrchat.com/home/user/{{ site.footer-links.vrchat }}" class="icon-30 vrchat" title="VRChat"><svg viewBox="0 0 512 512"><src="https://assets.vrchat.com/www/brand/vrchat-logo-white-transparent-crop-background.png"/></svg><!--[if lt IE 9]><em>YouTube</em><![endif]--></a></li>
+  <li><a href="https://vrchat.com/home/user/{{ site.footer-links.vrchat }}" class="icon-30 vrchat" title="VRChat"><svg viewBox="0 0 512 512"><path class="st0" d="M192.3,327.3h415.5c6.6,0,12.5,2.7,16.8,7s7,10.2,7,16.8v98c0,6.6-2.7,12.5-7,16.8c-3.8,3.8-8.7,6.2-14.1,6.8
+		v36.2c0,8.5-6.9,14.8-15.2,11.8c-3-1.1-6.2-3.6-9.3-7.7l-31.5-40.2H192.3c-6.6,0-12.5-2.7-16.8-7s-7-10.2-7-16.8V351
+		c0-6.6,2.7-12.5,7-16.8S185.7,327.3,192.3,327.3z M601.5,463.8h6.2c4.1,0,7.8-1.6,10.5-4.4s4.4-6.4,4.4-10.5V351
+		c0-4.1-1.6-7.8-4.4-10.5s-6.4-4.4-10.5-4.4H192.3c-4.1,0-7.8,1.6-10.5,4.4s-4.4,6.4-4.4,10.5v98c0,4.1,1.6,7.8,4.4,10.5
+		s6.4,4.4,10.5,4.4H559c12.3,15.5,24.3,31.2,36.6,46.7c2,2.6,6,3,5.9-2L601.5,463.8L601.5,463.8L601.5,463.8z M498.1,411.4h18.7
+		l-9.4-33L498.1,411.4z M584.7,353.4H359.8c-8.4,0-15.3,6.9-15.3,15.3V431c0,8.4,6.9,15.3,15.3,15.3h224.8c8.4,0,15.3-6.9,15.3-15.3
+		v-62.3C600,360.4,593.1,353.4,584.7,353.4L584.7,353.4z M373.5,424.8c2,2,4.8,3,8.5,3c2.4,0,4.4-0.4,5.8-1.2
+		c1.4-0.8,2.5-1.7,3.2-2.9s1.2-2.4,1.5-3.7c0.2-1.3,0.4-2.6,0.5-3.7c0.2-1.6,0.9-2.8,2.2-3.4c1.3-0.6,2.9-0.9,4.8-0.9
+		c2.4,0,4.2,0.5,5.4,1.4c1.2,0.9,1.7,2.7,1.7,5.5c0,3.2-0.6,6.2-1.9,8.8c-1.2,2.7-3,4.9-5.3,6.7c-2.3,1.8-5,3.2-8.2,4.2
+		c-3.1,1-6.6,1.5-10.3,1.5c-3.4,0-6.6-0.5-9.5-1.3c-3-0.9-5.6-2.3-7.9-4.2c-2.3-2-4.1-4.5-5.3-7.6c-1.3-3.1-2-7-2-11.5v-30
+		c0-4.5,0.6-8.4,2-11.5c1.3-3.1,3.1-5.6,5.4-7.6c2.3-2,4.9-3.4,7.9-4.2c3-0.9,6.2-1.3,9.5-1.3c3.8,0,7.2,0.5,10.3,1.5
+		c3.1,0.9,5.9,2.3,8.1,4.1c2.3,1.7,4,3.9,5.2,6.5c1.2,2.6,1.9,5.4,1.9,8.4c0,2.8-0.5,4.6-1.7,5.5c-1.2,0.9-2.9,1.3-5.2,1.3
+		c-2,0-3.7-0.3-4.9-0.9c-1.3-0.6-2-1.8-2-3.4c-0.1-0.9-0.2-1.9-0.5-3c-0.2-1.2-0.7-2.3-1.5-3.5s-1.9-2.1-3.3-2.9
+		c-1.4-0.8-3.4-1.2-6-1.2c-3.7,0-6.5,1-8.4,3c-2,2-2.9,5.2-2.9,9.4v30C370.5,419.8,371.6,422.9,373.5,424.8L373.5,424.8z
+		 M469.4,435.1c0,1.4-0.7,2.5-2.2,3.3c-1.5,0.8-3,1.1-4.8,1.1c-1.8,0-3.4-0.4-4.8-1.1c-1.4-0.8-2.2-1.9-2.2-3.3v-30.9h-24.2v30.9
+		c0,1.4-0.7,2.5-2.2,3.3c-1.5,0.8-3,1.1-4.8,1.1c-1.8,0-3.4-0.4-4.8-1.1c-1.4-0.8-2.2-1.9-2.2-3.3v-69.8c0-1.5,0.7-2.6,2.2-3.3
+		c1.4-0.7,3-1,4.8-1c1.7,0,3.3,0.3,4.8,1c1.5,0.7,2.2,1.8,2.2,3.3v28h24.2v-28c0-1.5,0.7-2.6,2.2-3.3c1.4-0.7,3-1,4.8-1
+		c1.7,0,3.3,0.3,4.8,1c1.5,0.7,2.2,1.8,2.2,3.3V435.1z M536.6,436c-0.5,0.7-1.3,1.3-2.2,1.8c-0.9,0.5-1.8,0.9-2.8,1.2
+		c-1,0.3-2,0.5-3,0.5c-1.2,0-2.3-0.2-3-0.6c-0.9-0.5-1.4-1.2-1.6-2.2l-4.1-14.3h-24.6l-4.1,14.3c-0.3,1-0.9,1.7-1.6,2.2
+		c-0.9,0.4-1.9,0.6-3,0.6c-0.9,0-2-0.2-3-0.5c-1-0.3-2-0.7-2.8-1.2c-0.9-0.5-1.6-1.1-2.2-1.8c-0.5-0.7-0.9-1.5-0.9-2.3
+		c0-0.2,0.1-0.5,0.2-1.1l20.8-67.6c0.5-1.6,1.6-2.8,3.4-3.6c1.7-0.8,3.6-1.1,5.6-1.1c2.1,0,4,0.4,5.7,1.1c1.7,0.8,2.8,2,3.4,3.6
+		l20.8,67.6c0.2,0.5,0.2,0.9,0.2,1.1C537.4,434.5,537.2,435.3,536.6,436z M587.3,371.6c-0.8,1.3-1.9,2-3.3,2h-15.7v61.6
+		c0,1.4-0.7,2.5-2.2,3.3c-1.5,0.8-3,1.1-4.8,1.1c-1.8,0-3.4-0.4-4.8-1.1c-1.4-0.8-2.2-1.9-2.2-3.3v-61.6h-15.8
+		c-1.4,0-2.5-0.6-3.3-1.9s-1.1-2.7-1.1-4.5c0-1.5,0.4-2.9,1.1-4.2c0.7-1.3,1.8-2,3.4-2h45.5c1.5,0,2.6,0.6,3.4,2
+		c0.7,1.3,1.1,2.7,1.1,4.2C588.4,368.8,588,370.2,587.3,371.6L587.3,371.6z M200.5,367.8l20.8,67.6c0.5,1.6,1.7,2.8,3.4,3.6
+		c1.7,0.8,3.6,1.1,5.6,1.1c2.1,0,4-0.4,5.7-1.1c1.7-0.8,2.8-2,3.4-3.6l20.6-67.6c0.2-0.5,0.2-0.9,0.2-1.1c0-0.9-0.3-1.6-0.9-2.3
+		c-0.5-0.7-1.3-1.3-2.2-1.8c-0.9-0.5-1.8-0.9-2.8-1.2c-1-0.3-2-0.4-3-0.4c-1.3,0-2.3,0.2-3,0.6c-0.9,0.4-1.4,1.2-1.6,2.2L230.3,422
+		l-16.4-58.3c-0.3-1-0.9-1.7-1.6-2.2c-0.9-0.5-1.9-0.6-3-0.6c-0.9,0-2,0.2-3,0.4c-1,0.3-2,0.7-2.8,1.2c-0.9,0.5-1.6,1.1-2.2,1.8
+		c-0.5,0.7-0.9,1.5-0.9,2.3C200.2,366.9,200.3,367.2,200.5,367.8L200.5,367.8z M268.4,365.2c0-1.2,0.4-2.2,1.2-3s2-1.3,3.3-1.3h21.3
+		c3.5,0,6.8,0.4,9.9,1.1c3,0.8,5.8,2,8.1,3.7c2.3,1.7,4.1,4,5.5,6.9c1.3,2.9,2,6.5,2,10.8c0,6.2-1.3,11-4.1,14.5
+		c-2.7,3.4-6,5.9-10.1,7l14.1,26.1c0.2,0.3,0.4,0.6,0.4,0.9c0.1,0.3,0.1,0.6,0.1,0.8c0,0.9-0.2,1.7-0.8,2.7c-0.5,0.9-1.2,1.7-2,2.3
+		c-0.9,0.7-1.7,1.2-2.8,1.6c-1,0.5-2,0.6-3,0.6c-1,0-2-0.3-2.7-0.9c-0.9-0.5-1.5-1.4-2.1-2.5l-15.2-29.7h-9.1v28
+		c0,1.4-0.7,2.5-2.2,3.3c-1.4,0.8-3,1.1-4.8,1.1c-1.7,0-3.3-0.4-4.8-1.1c-1.5-0.8-2.2-1.9-2.2-3.3v-69.6H268.4L268.4,365.2z
+		 M282.3,373.2v22.9h11.8c3.5,0,6.3-0.9,8.4-2.5c2.1-1.7,3.1-4.6,3.1-8.8s-1-7.2-3.1-8.9s-4.8-2.6-8.4-2.6L282.3,373.2L282.3,373.2
+		L282.3,373.2z"/></svg><!--[if lt IE 9]><em>YouTube</em><![endif]--></a></li>
   {% endif %}
 
 </ul>
