--- a/_includes/fonts.html
+++ b/_includes/fonts.html
@@ -3,7 +3,7 @@
   window.WebFontConfig = {
       custom: {
           families: ['Spoqa Han Sans:100,300,400,700'],
-          urls: ['https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css']
+          urls: ['https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap']
       },
       timeout: 60000
   };
