--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  font-family: $base-font;
+  font-family: 'IBM Plex Sans', sans-serif;
   color: $base-color;
   line-height: 1.7em;
 }
