--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,3 +3,7 @@
 {% if site.footer-text %}
 <p>{{ site.footer-text }}</p>
 {% endif %}
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap');
+</style>
