--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body>
+  <body {
+  background-color: pink;
+}>
     {% include nav.html %}
 
     {% if page.toc==true %}
