--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body {
-  background-color: pink;
-}>
+  <body>
     {% include nav.html %}
 
     {% if page.toc==true %}
